BTWCT-1650: Fixed tablet z-index for filter menu

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -394,7 +394,6 @@ $header-height: 74px;
 .cmp-search__sort-filter {
     position: relative;
     top: -55px;
-    // height: 100vh;
 
     .cmp-search-filters__tags {
         display: none;
@@ -437,6 +436,7 @@ $header-height: 74px;
         width: 40%;
         height: 100%;
         padding: $header-height 20px 20px 20px;
+        z-index: ($navigation-z-index + 1);
     }
 }
 
@@ -508,7 +508,8 @@ $header-height: 74px;
         .overlay {
             visibility: visible;
             display: block;
-            margin: -40px;
+            z-index: ($navigation-z-index + 1);
+            position: fixed;
         }
     }
 
@@ -526,12 +527,3 @@ $header-height: 74px;
         }
     }
 }
-
-// .sort-filter-container-sticky {
-//      position: fixed;
-//      top: 78px;
-//  }
-
-// .sort-filter-container-affix {
-//      position: relative;
-//  }
